--- a/po/es.po
+++ b/po/es.po
@@ -1,8 +1,7 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# 
-# Sergio Varela <sergiovg01@outlook.com>, 2022.
+# Spanish - Spain translations for Eyedropper package.
+# Copyright (C) 2022 THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the Eyedropper package.
+# Sergio Varela <sergiovg01@outlook.com>, 2023.
 #
 msgid ""
 msgstr ""
