--- a/po/fr.po
+++ b/po/fr.po
@@ -1,6 +1,6 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# French translations for Eyedropper package.
+# Copyright (C) 2022 THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the Eyedropper package.
 # Irénée THIRION <irenee.thirion@e.email>, 2022.
 # "J. Lavoie" <j.lavoie@net-c.ca>, 2023.
 msgid ""
