--- a/po/nl.po
+++ b/po/nl.po
@@ -1,6 +1,6 @@
-# Dutch translations for eyedropper package.
-# Copyright (C) 2022 THE eyedropper'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the eyedropper package.
+# Dutch translations for Eyedropper package.
+# Copyright (C) 2022 THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the Eyedropper package.
 # Automatically generated, 2022.
 #
 msgid ""
