--- a/po/pt.po
+++ b/po/pt.po
@@ -1,7 +1,6 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Brazilian Portuguese translations for Eyedropper package.
+# Copyright (C) 2022 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the Eyedropper package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # swyknox <swyknox@gmail.com>, 2023.
 #
 msgid ""
