--- a/po/ru.po
+++ b/po/ru.po
@@ -8,17 +8,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://github.com/FineFindus/eyedropper\n"
-"POT-Creation-Date: 2023-09-21 08:49+0000\n"
-"PO-Revision-Date: 2023-09-25 18:04+0300\n"
-"Last-Translator: Aleksandr Melman <Alexmelman88@gmail.com>\n"
+"POT-Creation-Date: 2023-11-14 19:29+0000\n"
+"PO-Revision-Date: 2023-12-03 16:19+0100\n"
+"Last-Translator: Milo Ivir <mail@milotype.de>\n"
 "Language-Team: \n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
-"X-Generator: Poedit 3.3.2\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
+"X-Generator: Poedit 3.0\n"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7
@@ -680,132 +680,26 @@ msgstr "LMS"
 msgid "Hunter Lab"
 msgstr "Hunter Lab"
 
-#: src/window.rs:222
+#: src/widgets/preferences/preferences_window.rs:413
+msgid "Oklab"
+msgstr "Oklab"
+
+#: src/widgets/preferences/preferences_window.rs:414
+msgid "Oklch"
+msgstr "Oklch"
+
+#: src/window.rs:272
 msgid "Cleared history"
 msgstr "История очищена"
 
-#: src/window.rs:223
+#: src/window.rs:273
 msgid "Undo"
 msgstr "Отменить"
 
-#: src/window.rs:558
+#: src/window.rs:561
 msgid "Failed to get palette color"
 msgstr "Не удалось получить цвет палитры"
 
-#: src/window.rs:589
+#: src/window.rs:592
 msgid "Failed to pick a color"
 msgstr "Не удалось выбрать цвет"
-
-#~ msgctxt "Alpha is not shown"
-#~ msgid "Not shown"
-#~ msgstr "Не показано"
-
-#~ msgid "Which color name sets should be used for the names"
-#~ msgstr "Какие наборы названий цветов следует использовать для названий"
-
-#~ msgid "Default Precision"
-#~ msgstr "Точность по умолчанию"
-
-#~ msgid "Use the recommended precision"
-#~ msgstr "Использовать рекомендуемую точность"
-
-#~ msgid "Show color names from the w3c basic color keyword set"
-#~ msgstr "Показать названия цветов из базового набора ключевых слов w3c"
-
-#~ msgid "Show color names from the w3c extended color keyword  set"
-#~ msgstr ""
-#~ "Показать названия цветов из расширенного набора ключевых слов цвета w3c"
-
-#~ msgid "Show color names from the GNOME color palette"
-#~ msgstr "Показать названия цветов из цветовой палитры GNOME"
-
-#~ msgctxt "Name of the color set from the xkcd color survey"
-#~ msgid "xkcd"
-#~ msgstr "xkcd"
-
-#~ msgid "Show color names from the xkcd color survey"
-#~ msgstr "Показать названия цветов из цветового опроса xkcd"
-
-#~ msgctxt ""
-#~ "The changelog of the current version. Should be similar to the CHANGELOG."
-#~ "md file at the project root. Please ensure that the tags have a matching "
-#~ "closing tag. Since xgettext does not recognize rust multiline strings, "
-#~ "this should be on a single line using line breaks (\\n) for new lines."
-#~ msgid ""
-#~ "<p>A minor release with many small QoL improvements.</p><p>Added:</p>\n"
-#~ "<ul><li>Show a toast with an Undo option when clearing the history</"
-#~ "li><li>Use Ctrl-Q to close the window</li><li>Use a default minium window "
-#~ "size, content should no longer unnecessarily cut off</li><li>New icon by "
-#~ "@bertob</li><li>Export palettes as Adobe Swatch Exchange (ASE), hex, PAL, "
-#~ "Paint.NET (txt) files</li><li>Minor changes to the store metadata</li></"
-#~ "ul><p>Changed:</p>\n"
-#~ "<ul><li>Hunter-Lab now displays 0 instead of NaN</li><li>Improved "
-#~ "tooltips for copying colors</li><li>Palette window now uses a button with "
-#~ "a more explicit text instead of an icon</li><li>Reworded project "
-#~ "description</li><li>Updated all screenshots</li></ul><p>Fixed:</p>\n"
-#~ "<ul><li>Separator is now hidden when the history list is hidden</"
-#~ "li><li>Improved editing experience when change the Hex color/name</li></"
-#~ "ul>"
-#~ msgstr ""
-#~ "<p>Незначительный выпуск с множеством небольших улучшений качества жизни."
-#~ "</p><p>Добавлено:</p>\n"
-#~ "<ul><li>Отображение всплывающего уведомления с опцией \"Отменить\" при "
-#~ "очистке истории</li><li>Использование Ctrl-Q для закрытия окна</"
-#~ "li><li>Использование минимального размер окна по умолчанию, содержимое "
-#~ "больше не должно обрезаться без необходимости</li><li>Новая иконка от "
-#~ "@bertob</li><li>Экспорт палитр в виде файлов Adobe Swatch Exchange (ASE), "
-#~ "hex, PAL, Paint.NET (txt)</li><li>Небольшие изменения в метаданных "
-#~ "хранения</li></ul><p>Изменено:</p>\n"
-#~ "<ul><li>Hunter-Lab теперь отображает 0 вместо NaN</li><li>Улучшенные "
-#~ "всплывающие подсказки для копирования цветов</li><li>Окно палитры теперь "
-#~ "использует кнопку с более подробным текстом вместо иконки.</"
-#~ "li><li>Переформулировано описание проекта</li><li>Обновлены все снимки "
-#~ "экрана</li></ul><p>Исправлено:</p>\n"
-#~ "<ul><li>Разделитель теперь скрыт, когда список истории скрыт</"
-#~ "li><li>Улучшен опыт редактирования при изменении цвета/имени Hex</li></ul>"
-
-#~ msgctxt ""
-#~ "The changelog of the current version. Should be similar to the CHANGELOG."
-#~ "md file at the project root. Please ensure that the tags have a matching "
-#~ "closing tag. Since xgettext does not recognize rust multiline strings, "
-#~ "this should be on a single line using line breaks (\\n) for new lines."
-#~ msgid ""
-#~ "<p>A new release with exciting new features.</p><p>New Features:</p>\n"
-#~ "<ul><li>Customize formats in the settings</li><li>Export the colorscheme "
-#~ "as a GIMP palette using the new export option</li><li>A placeholder is "
-#~ "shown when no color is picked</li><li> Hunter-Lab and LMS color spaces "
-#~ "have been added</li><li>The GNOME color palette has been added</"
-#~ "li><li>Fixed minor issues</li></ul>"
-#~ msgstr ""
-#~ "<p>Новый релиз с новыми захватывающими возможностями.</p><p>Новые "
-#~ "возможности:</p>\n"
-#~ "<ul><li>Настройка цветовых форматов</li><li>Экспорт цветовой схемы в виде "
-#~ "палитры GIMP, используя новый параметр экспорта.</li><li>Если цвет не "
-#~ "выбран, отображается заполнитель.</li><li>Добавлены цветовые пространства "
-#~ "Hunter-Lab и LMS.</li><li>Добавлена цветовая палитра GNOME</"
-#~ "li><li>Исправлены незначительные проблемы</li></ul>"
-
-#~ msgid "A powerful color picker and formatter"
-#~ msgstr "Мощный инструмент для выбора цвета и средство форматирования"
-
-#~ msgid "Main window dark"
-#~ msgstr "Главное окно тёмное"
-
-#~ msgid "Main window light"
-#~ msgstr "Главное окно светлое"
-
-#~ msgid "Customized color formatting in dark mode"
-#~ msgstr "Пользовательское форматирование цвета в темном режиме"
-
-#~ msgid "Customized color formatting"
-#~ msgstr "Пользовательское форматирование цвета"
-
-#~ msgctxt "Tooltip of the copy button for format rows"
-#~ msgid "Copy Format"
-#~ msgstr "Копировать формат"
-
-#~ msgctxt ""
-#~ "Name of the save palette file, do not add a file extension, .gpl will be "
-#~ "added automatically"
-#~ msgid "palettes"
-#~ msgstr "палитры"
