--- a/po/cs.po
+++ b/po/cs.po
@@ -409,6 +409,14 @@ msgstr "LMS Formát"
 msgid "Hunter Lab Format"
 msgstr "Hunter Lab Formát"
 
+#: data/resources/ui/preferences/preferences.blp:205
+msgid "Oklab Format"
+msgstr "Oklab Formát"
+
+#: data/resources/ui/preferences/preferences.blp:211
+msgid "Oklch Format"
+msgstr "Oklch Formát"
+
 #: data/resources/ui/shortcuts.blp:11
 msgctxt "shortcut window"
 msgid "General"
@@ -538,10 +546,22 @@ msgstr "Kopírovat LMS"
 msgid "Copy Hunter Lab"
 msgstr "Kopírovat Hunter Lab"
 
+#: data/resources/ui/window.blp:183
+msgid "Copy Oklab"
+msgstr "Kopírovat Oklab"
+
+#: data/resources/ui/window.blp:188
+msgid "Copy Oklch"
+msgstr "Kopírovat Oklch"
+
 #. Translators: This should not be translate, Please enter your credits here instead (format: "Name https://example.com" or "Name <email@example.com>", no quotes)
 #: src/widgets/about_window.rs:47
 msgid "translator-credits"
 msgstr "Písek Pískovec <pisekpiskovec@gmail.com>"
+
+#: src/widgets/about_window.rs:85
+msgid "Parse RGBA/ARGB Hex-Colors"
+msgstr "Rozbor RGBA/ARGB Hex-Barev"
 
 #: src/widgets/about_window.rs:105
 msgctxt ""
