--- a/po/es.po
+++ b/po/es.po
@@ -31,9 +31,9 @@ msgstr "Selector de color"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:5
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:8
-#: src/widgets/about_window.rs:74
-msgid "A powerful color picker and formatter"
-msgstr "Un potente selector y formateador de colores"
+#: src/widgets/about_window.rs:71
+msgid "Pick and format colors"
+msgstr "Elija y formatee los colores"
 
 #. Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 #: data/com.github.finefindus.eyedropper.desktop.in.in:11
