--- a/po/it.po
+++ b/po/it.po
@@ -415,6 +415,14 @@ msgstr "Formato LMS"
 msgid "Hunter Lab Format"
 msgstr "Formato Hunter Lab"
 
+#: data/resources/ui/preferences/preferences.blp:205
+msgid "Oklab Format"
+msgstr "Formato Oklab"
+
+#: data/resources/ui/preferences/preferences.blp:211
+msgid "Oklch Format"
+msgstr "Formato Oklch"
+
 #: data/resources/ui/shortcuts.blp:11
 msgctxt "shortcut window"
 msgid "General"
@@ -543,6 +551,14 @@ msgstr "Copia LMS"
 #: data/resources/ui/window.blp:178
 msgid "Copy Hunter Lab"
 msgstr "Copia Hunter Lab"
+
+#: data/resources/ui/window.blp:183
+msgid "Copy Oklab"
+msgstr "Copia Oklab"
+
+#: data/resources/ui/window.blp:188
+msgid "Copy Oklch"
+msgstr "Copia Oklch"
 
 #. Translators: This should not be translate, Please enter your credits here instead (format: "Name https://example.com" or "Name <email@example.com>", no quotes)
 #: src/widgets/about_window.rs:47
