--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2,13 +2,14 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the Eyedropper package.
 # Filipe Motta <luiz_filipe_motta@hotmail.com>, 2024.
+# Ciro Mota <contato.ciromota@outlook.com>, 2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://github.com/FineFindus/eyedropper\n"
 "POT-Creation-Date: 2024-01-01 21:48+0000\n"
-"PO-Revision-Date: 2024-01-11 01:06+0000\n"
-"Last-Translator: Filipe Motta <luiz_filipe_motta@hotmail.com>\n"
+"PO-Revision-Date: 2024-03-02 15:45+0000\n"
+"Last-Translator: Ciro Mota <contato.ciromota@outlook.com>\n"
 "Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/"
 "eyedropper/eyedropper/pt_BR/>\n"
 "Language: pt_BR\n"
@@ -81,481 +82,483 @@ msgstr "Insira cores em diferentes formatos"
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:26
 #: src/widgets/about_window.rs:86
 msgid "View colors in Hex, RGB, HSV, HSL, CMYK, XYZ and CIE-Lab format"
-msgstr ""
+msgstr "Visualize cores nos formatos Hex, RGB, HSV, HSL, CMYK, XYZ e CIE-Lab"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:27
 #: src/widgets/about_window.rs:87
 msgid "Customize which formats appear as well as their order"
-msgstr ""
+msgstr "Personalize quais formatos aparecem, bem como sua ordem"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:28
 #: src/widgets/about_window.rs:88
 msgid "Generate a palette of different shades"
-msgstr ""
+msgstr "Gere uma paleta de tons diferentes"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:34
 msgid "Main window with a color in different formats"
-msgstr ""
+msgstr "Janela principal com cores em diferentes formatos"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:38
 msgid "Main window with customized formats"
-msgstr ""
+msgstr "Janela principal com formatos personalizados"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:42
 msgid "Dialog showing generated color palettes"
-msgstr ""
+msgstr "Caixa de diálogo mostrando paletas de cores geradas"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:46
 msgid "Status page stating to pick a color to get started"
-msgstr ""
+msgstr "Página de status indicando para escolher uma cor para começar."
 
 #: data/resources/ui/palette-window.blp:7
 msgctxt "Adobes palette format"
 msgid "Adobe Swatch Exchange"
-msgstr ""
+msgstr "Adobe Swatch Exchange"
 
 #: data/resources/ui/palette-window.blp:13
 msgctxt "LibreOffice/OpenOffice palette file"
 msgid "LibreOffice Palette"
-msgstr ""
+msgstr "Paleta do LibreOffice"
 
 #: data/resources/ui/palette-window.blp:19
 msgctxt "Gimp/Inkscape palette format"
 msgid "Gimp Palette"
-msgstr ""
+msgstr "Paleta do Gimp"
 
 #: data/resources/ui/palette-window.blp:25
 msgctxt "Paint.net palette format, should most like not be translated"
 msgid "Paint.NET"
-msgstr ""
+msgstr "Paint.NET"
 
 #: data/resources/ui/palette-window.blp:31
 msgctxt "Palette format file name"
 msgid "Hex"
-msgstr ""
+msgstr "Hex"
 
 #: data/resources/ui/palette-window.blp:37
 msgctxt "Palette format file name"
 msgid "PAL"
-msgstr ""
+msgstr "PAL"
 
 #: data/resources/ui/palette-window.blp:46
 msgid "Palettes"
-msgstr ""
+msgstr "Paletas"
 
 #: data/resources/ui/palette-window.blp:54
 msgid "Save Palettes…"
-msgstr ""
+msgstr "Salvar paletas…"
 
 #: data/resources/ui/preferences/custom-format-row.blp:12
 msgctxt "Tooltip of the reset button for custom format"
 msgid "Reset Format"
-msgstr ""
+msgstr "Redefinir formato"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:5
 #: data/resources/ui/preferences/preferences.blp:29
 msgid "Name Sources"
-msgstr ""
+msgstr "Fontes de Nomes"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:17
 msgctxt ""
 "Name of the basic color keyword set from https://www.w3.org/TR/css-color-3/"
 "#html4"
 msgid "Basic"
-msgstr ""
+msgstr "Básico"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:18
 msgid "Basic web colors"
-msgstr ""
+msgstr "Cores básicas da web"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:22
 msgctxt ""
 "Name of the extended color keyword set from https://www.w3.org/TR/css-"
 "color-3/#svg-color"
 msgid "Extended"
-msgstr ""
+msgstr "Estendido"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:23
 msgid "X11 and SVG color values"
-msgstr ""
+msgstr "Valores de cores X11 e SVG"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:27
 msgctxt ""
 "Name of the color set from the GNOME color palette (https://developer.gnome."
 "org/hig/reference/palette.html)"
 msgid "GNOME Color Palette"
-msgstr ""
+msgstr "Paleta de cores do GNOME"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:28
 msgid "Colors for GNOME app icons and illustrations"
-msgstr ""
+msgstr "Cores para ícones e ilustrações de aplicativos GNOME"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:32
 msgctxt "Name of the color set from the xkcd color survey"
 msgid "xkcd Color Survey"
-msgstr ""
+msgstr "Pesquisa de cores xkcd"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:33
 msgid "954 RGB colors named by volunteers"
-msgstr ""
+msgstr "954 cores RGB nomeadas por voluntários"
 
 #: data/resources/ui/preferences/preferences.blp:11
 msgid "General"
-msgstr ""
+msgstr "Geral"
 
 #: data/resources/ui/preferences/preferences.blp:14
 msgid "Formatting"
-msgstr ""
+msgstr "Formatando"
 
 #: data/resources/ui/preferences/preferences.blp:17
 msgid "Alpha-Value-Position"
-msgstr ""
+msgstr "Posição do valor Alpha"
 
 #: data/resources/ui/preferences/preferences.blp:18
 msgid "Where the Alphavalue is positioned in the Hexstring"
-msgstr ""
+msgstr "Onde o valor Alpha está posicionado na string Hex"
 
 #: data/resources/ui/preferences/preferences.blp:21
 msgctxt "Alphavalue is not shown"
 msgid "None"
-msgstr ""
+msgstr "Nenhum"
 
 #: data/resources/ui/preferences/preferences.blp:22
 msgctxt "Alphavalue is shown at the end"
 msgid "End"
-msgstr ""
+msgstr "Final"
 
 #: data/resources/ui/preferences/preferences.blp:23
 msgctxt "Alphavalue is shown at the start"
 msgid "Start"
-msgstr ""
+msgstr "Início"
 
 #: data/resources/ui/preferences/preferences.blp:30
 msgid "Sources for displaying color names"
-msgstr ""
+msgstr "Fontes para exibição dos nomes das cores"
 
 #: data/resources/ui/preferences/preferences.blp:41
 #: data/resources/ui/preferences/preferences.blp:49
 msgid "Precision"
-msgstr ""
+msgstr "Precisão"
 
 #: data/resources/ui/preferences/preferences.blp:57
 msgid "CIE Color Space"
-msgstr ""
+msgstr "Espaço de cores CIE"
 
 #: data/resources/ui/preferences/preferences.blp:60
 msgid "CIE Illuminants"
-msgstr ""
+msgstr "Iluminantes CIE"
 
 #: data/resources/ui/preferences/preferences.blp:61
 msgid "Lighting conditions for the CIE color space"
-msgstr ""
+msgstr "Condições de iluminação para o espaço de cores CIE"
 
 #: data/resources/ui/preferences/preferences.blp:69
 msgid "A (Incandescent/tungsten)"
-msgstr ""
+msgstr "A (incandescente/tungstênio)"
 
 #: data/resources/ui/preferences/preferences.blp:70
 msgid "B (Old direct sunlight at noon)"
-msgstr ""
+msgstr "B (Luz solar direta antiga ao meio-dia)"
 
 #: data/resources/ui/preferences/preferences.blp:71
 msgid "C (Old daylight)"
-msgstr ""
+msgstr "C (Velha luz do dia)"
 
 #: data/resources/ui/preferences/preferences.blp:72
 msgid "D50 (ICC profile PCS)"
-msgstr ""
+msgstr "D50 (Perfil ICC PCS)"
 
 #: data/resources/ui/preferences/preferences.blp:73
 msgid "D55 (Mid-morning daylight)"
-msgstr ""
+msgstr "D55 (Luz do meio da manhã)"
 
 #: data/resources/ui/preferences/preferences.blp:74
 msgid "D65 (Daylight, sRGB, Adobe-RGB)"
-msgstr ""
+msgstr "D65 (Luz diurna, sRGB, Adobe-RGB)"
 
 #: data/resources/ui/preferences/preferences.blp:75
 msgid "D75 (North sky daylight)"
-msgstr ""
+msgstr "D75 (luz do dia do céu do Norte)"
 
 #: data/resources/ui/preferences/preferences.blp:76
 msgid "E (Equal energy)"
-msgstr ""
+msgstr "E (Igual energia)"
 
 #: data/resources/ui/preferences/preferences.blp:77
 msgid "F1 (Daylight Fluorescent)"
-msgstr ""
+msgstr "F1 (Fluorescente à luz do dia)"
 
 #: data/resources/ui/preferences/preferences.blp:78
 msgid "F2 (Cool fluorescent)"
-msgstr ""
+msgstr "F2 (Fluorescente fria)"
 
 #: data/resources/ui/preferences/preferences.blp:79
 msgid "F3 (White Fluorescent)"
-msgstr ""
+msgstr "F3 (Branco fluorescente)"
 
 #: data/resources/ui/preferences/preferences.blp:80
 msgid "F4 (Warm White Fluorescent)"
-msgstr ""
+msgstr "F4 (Branco quente fluorescente)"
 
 #: data/resources/ui/preferences/preferences.blp:81
 msgid "F5 (Daylight Fluorescent)"
-msgstr ""
+msgstr "F5 (Fluorescente à luz do dia)"
 
 #: data/resources/ui/preferences/preferences.blp:82
 msgid "F6 (Lite White Fluorescent)"
-msgstr ""
+msgstr "F6 (Fluorescente branco leve)"
 
 #: data/resources/ui/preferences/preferences.blp:83
 msgid "F7 (Daylight fluorescent, D65 simulator)"
-msgstr ""
+msgstr "F7 (Fluorescente luz do dia, simulador D65)"
 
 #: data/resources/ui/preferences/preferences.blp:84
 msgid "F8 (Sylvania F40, D50 simulator)"
-msgstr ""
+msgstr "F8 (Simulador Sylvania F40, D50)"
 
 #: data/resources/ui/preferences/preferences.blp:85
 msgid "F9 (Cool White Fluorescent)"
-msgstr ""
+msgstr "F9 (Branco frio fluorescente)"
 
 #: data/resources/ui/preferences/preferences.blp:86
 msgid "F10 (Ultralume 50, Philips TL85)"
-msgstr ""
+msgstr "F10 (Ultralume 50, Philips TL85)"
 
 #: data/resources/ui/preferences/preferences.blp:87
 msgid "F11 (Ultralume 40, Philips TL84)"
-msgstr ""
+msgstr "F11 (Ultralume 40, Philips TL84)"
 
 #: data/resources/ui/preferences/preferences.blp:88
 msgid "F12 (Ultralume 30, Philips TL83)"
-msgstr ""
+msgstr "F12 (Ultralume 30, Philips TL83)"
 
 #: data/resources/ui/preferences/preferences.blp:100
 msgid "CIE Standard Observer"
-msgstr ""
+msgstr "Observador padrão CIE"
 
 #: data/resources/ui/preferences/preferences.blp:101
 msgid "The CIE standard observer's field of view"
-msgstr ""
+msgstr "Campo de visão do observador padrão CIE"
 
 #: data/resources/ui/preferences/preferences.blp:112
 msgid "Color Formats"
-msgstr ""
+msgstr "Formatos de cores"
 
 #: data/resources/ui/preferences/preferences.blp:113
 msgid "Customize the visible formats and in which order they are displayed."
-msgstr ""
+msgstr "Personalize os formatos visíveis e a ordem em que são exibidos."
 
 #: data/resources/ui/preferences/preferences.blp:118
 msgctxt "Tooltip of the button to reset the format order"
 msgid "Reset Order"
-msgstr ""
+msgstr "Redefinir Ordem"
 
 #: data/resources/ui/preferences/preferences.blp:138
 #: data/resources/ui/preferences/preferences.blp:141
 msgid "Formats"
-msgstr ""
+msgstr "Formatos"
 
 #: data/resources/ui/preferences/preferences.blp:142
 msgid ""
 "Edit how the color formats are displayed. The “{}” will be replaced in with "
 "the values of the formats. Custom formats cannot be used as input."
 msgstr ""
+"Edite como os formatos de cores são exibidos. O “{}” será substituído por "
+"valores dos formatos. Formatos personalizados não podem ser usados como entrada."
 
 #: data/resources/ui/preferences/preferences.blp:145
 msgid "RGB Format"
-msgstr ""
+msgstr "Formato RGB"
 
 #: data/resources/ui/preferences/preferences.blp:151
 msgid "HSL Format"
-msgstr ""
+msgstr "Formato HSL"
 
 #: data/resources/ui/preferences/preferences.blp:157
 msgid "HSV Format"
-msgstr ""
+msgstr "Formato HSV"
 
 #: data/resources/ui/preferences/preferences.blp:163
 msgid "CMYK Format"
-msgstr ""
+msgstr "Formato CMYK"
 
 #: data/resources/ui/preferences/preferences.blp:169
 msgid "XYZ Format"
-msgstr ""
+msgstr "Formato XYZ"
 
 #: data/resources/ui/preferences/preferences.blp:175
 msgid "CIELAB Format"
-msgstr ""
+msgstr "Formato CIELAB"
 
 #: data/resources/ui/preferences/preferences.blp:181
 msgid "HWB Format"
-msgstr ""
+msgstr "Formato HWB"
 
 #: data/resources/ui/preferences/preferences.blp:187
 msgid "CIELCh/HCL Format"
-msgstr ""
+msgstr "Formato CIELCh/HCL"
 
 #: data/resources/ui/preferences/preferences.blp:193
 msgid "LMS Format"
-msgstr ""
+msgstr "Formato LMS"
 
 #: data/resources/ui/preferences/preferences.blp:199
 msgid "Hunter Lab Format"
-msgstr ""
+msgstr "Formato Hunter Lab"
 
 #: data/resources/ui/preferences/preferences.blp:205
 msgid "Oklab Format"
-msgstr ""
+msgstr "Formato Oklab"
 
 #: data/resources/ui/preferences/preferences.blp:211
 msgid "Oklch Format"
-msgstr ""
+msgstr "Formato Oklch"
 
 #: data/resources/ui/shortcuts.blp:11
 msgctxt "shortcut window"
 msgid "General"
-msgstr ""
+msgstr "Geral"
 
 #: data/resources/ui/shortcuts.blp:14
 msgctxt "shortcut window"
 msgid "Show Preferences"
-msgstr ""
+msgstr "Mostrar Preferências"
 
 #: data/resources/ui/shortcuts.blp:19
 msgctxt "shortcut window"
 msgid "Show Shortcuts"
-msgstr ""
+msgstr "Mostrar Atalhos"
 
 #: data/resources/ui/shortcuts.blp:24
 msgctxt "shortcut window"
 msgid "Quit"
-msgstr ""
+msgstr "Sair"
 
 #: data/resources/ui/shortcuts.blp:30
 msgctxt "shortcut window"
 msgid "Color"
-msgstr ""
+msgstr "Cor"
 
 #: data/resources/ui/shortcuts.blp:33
 msgctxt "shortcut window"
 msgid "Pick a new Color"
-msgstr ""
+msgstr "Escolha uma nova cor"
 
 #: data/resources/ui/shortcuts.blp:38
 msgctxt "shortcut window"
 msgid "Randomize the Color"
-msgstr ""
+msgstr "Cor Aleatória"
 
 #: data/resources/ui/window.blp:7
 msgid "_Clear History"
-msgstr ""
+msgstr "_Apagar o histórico"
 
 #: data/resources/ui/window.blp:12
 msgid "_Random Color"
-msgstr ""
+msgstr "_Cor aleatória"
 
 #: data/resources/ui/window.blp:19
 msgid "_Preferences"
-msgstr ""
+msgstr "_Preferências"
 
 #: data/resources/ui/window.blp:24
 msgid "_Keyboard Shortcuts"
-msgstr ""
+msgstr "_Atalhos do teclado"
 
 #: data/resources/ui/window.blp:29
 msgid "_About Eyedropper"
-msgstr ""
+msgstr "_Sobre o Eyedropper"
 
 #: data/resources/ui/window.blp:50
 msgid "No Color"
-msgstr ""
+msgstr "Nenhuma Cor"
 
 #: data/resources/ui/window.blp:51
 msgid "Select a color from the screen to get started."
-msgstr ""
+msgstr "Selecione uma cor na tela para começar."
 
 #: data/resources/ui/window.blp:53
 msgid "_Pick a Color"
-msgstr ""
+msgstr "_Escolha uma cor"
 
 #: data/resources/ui/window.blp:78
 msgctxt "Tooltip of the colorpicker button"
 msgid "Pick a Color"
-msgstr ""
+msgstr "Escolha uma cor"
 
 #: data/resources/ui/window.blp:85
 msgid "Main Menu"
-msgstr ""
+msgstr "Menu Principal"
 
 #: data/resources/ui/window.blp:108
 msgctxt "Tooltip of the palette button"
 msgid "Open Palette Window"
-msgstr ""
+msgstr "Abrir Janela de Paleta"
 
 #: data/resources/ui/window.blp:128
 msgid "Copy Name"
-msgstr ""
+msgstr "Copiar Nome"
 
 #: data/resources/ui/window.blp:133
 msgid "Copy Hex Code"
-msgstr ""
+msgstr "Copiar código Hex"
 
 #: data/resources/ui/window.blp:137
 msgid "Copy RGB"
-msgstr ""
+msgstr "Copiar RGB"
 
 #: data/resources/ui/window.blp:141
 msgid "Copy HSL"
-msgstr ""
+msgstr "Copiar HSL"
 
 #: data/resources/ui/window.blp:145
 msgid "Copy HSV"
-msgstr ""
+msgstr "Copiar HSV"
 
 #: data/resources/ui/window.blp:149
 msgid "Copy CMYK"
-msgstr ""
+msgstr "Copiar CMYK"
 
 #: data/resources/ui/window.blp:153
 msgid "Copy XYZ"
-msgstr ""
+msgstr "Copiar XYZ"
 
 #: data/resources/ui/window.blp:158
 msgid "Copy CIELAB"
-msgstr ""
+msgstr "Copiar CIELAB"
 
 #: data/resources/ui/window.blp:163
 msgid "Copy HWB"
-msgstr ""
+msgstr "Copiar HWB"
 
 #: data/resources/ui/window.blp:168
 msgid "Copy CIELCh / HCL"
-msgstr ""
+msgstr "Copiar CIELCh / HCL"
 
 #: data/resources/ui/window.blp:173
 msgid "Copy LMS"
-msgstr ""
+msgstr "Copiar LMS"
 
 #: data/resources/ui/window.blp:178
 msgid "Copy Hunter Lab"
-msgstr ""
+msgstr "Copiar Hunter Lab"
 
 #: data/resources/ui/window.blp:183
 msgid "Copy Oklab"
-msgstr ""
+msgstr "Copiar Oklab"
 
 #: data/resources/ui/window.blp:188
 msgid "Copy Oklch"
-msgstr ""
+msgstr "Copiar Oklch"
 
 #. Translators: This should not be translate, Please enter your credits here instead (format: "Name https://example.com" or "Name <email@example.com>", no quotes)
 #: src/widgets/about_window.rs:47
 msgid "translator-credits"
-msgstr ""
+msgstr "Ciro Mota <contato.ciromota@outlook.com>"
 
 #: src/widgets/about_window.rs:85
 msgid "Parse RGBA/ARGB Hex-Colors"
-msgstr ""
+msgstr "Analisar cores hexadecimais RGBA/ARGB"
 
 #: src/widgets/about_window.rs:105
 msgctxt ""
@@ -571,87 +574,93 @@ msgid ""
 "li><li>Visual refinements to match the state of the art of GNOME apps</"
 "li><li>Internal code improvements and bug fixes</li></ul>"
 msgstr ""
+"<p>Uma nova versão com novos recursos interessantes e muitas melhorias.</p>\n"
+"<ul><li>Permitir inserir qualquer formato</li><li>Exibir cor na pesquisa de visão geral</"
+"li><li>Exportar paletas para o LibreOffice</li><li>Uma diferenciação visual "
+"entre cor e fundo</li><li>Conversão de cores aprimorada</"
+"li><li>Refinamentos visuais para corresponder ao estado da arte dos aplicativos GNOME</"
+"li><li>Melhorias no código interno e correções de bugs</li></ul>"
 
 #: src/widgets/color_format_row.rs:179
 msgid "Copied “{}”"
-msgstr ""
+msgstr "Copiado “{}”"
 
 #: src/widgets/history_item.rs:118
 msgid "Remove"
-msgstr ""
+msgstr "Remover"
 
 #: src/widgets/palette_dialog.rs:85
 msgctxt "Name for tints (lighter variants) of the color"
 msgid "Tints"
-msgstr ""
+msgstr "Matizes"
 
 #: src/widgets/palette_dialog.rs:87
 msgctxt "Name for shades (darker variants) of the color"
 msgid "Shades"
-msgstr ""
+msgstr "Tons"
 
 #: src/widgets/palette_dialog.rs:91
 msgctxt "Name for the opposite/complementary color (e.g. blue ⇔ yellow)"
 msgid "Complementary"
-msgstr ""
+msgstr "Complementar"
 
 #: src/widgets/palette_dialog.rs:96
 msgctxt ""
 "The name of the color palette. Consist of the two opposite colors (e.g. blue "
 "⇔ orange / green)"
 msgid "Split-Complementary"
-msgstr ""
+msgstr "Split-Complementar"
 
 #: src/widgets/palette_dialog.rs:101
 msgctxt ""
 "Name of the color palette, which would form a triangle above the color wheel"
 msgid "Triadic"
-msgstr ""
+msgstr "Triádico"
 
 #: src/widgets/palette_dialog.rs:104
 msgctxt "The name of the color palette."
 msgid "Tetradic"
-msgstr ""
+msgstr "Tetrádico"
 
 #: src/widgets/palette_dialog.rs:108
 msgctxt "Color palette consisting of six slight shifted colors"
 msgid "Analogous"
-msgstr ""
+msgstr "Análogo"
 
 #: src/widgets/preferences/preferences_window.rs:294
 msgid "Move Up"
-msgstr ""
+msgstr "Mover para cima"
 
 #: src/widgets/preferences/preferences_window.rs:296
 msgid "Move Down"
-msgstr ""
+msgstr "Mover para baixo"
 
 #: src/widgets/preferences/preferences_window.rs:392
 msgid "Hex-Code"
-msgstr ""
+msgstr "Código Hex"
 
 #: src/widgets/preferences/preferences_window.rs:403
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 #: src/widgets/preferences/preferences_window.rs:406 src/window.rs:441
 #: src/window.rs:466 src/window.rs:668 src/window.rs:851
 msgctxt "Information that no name for the color could be found"
 msgid "Not named"
-msgstr ""
+msgstr "Não nomeado"
 
 #: src/window.rs:269
 msgid "Cleared history"
-msgstr ""
+msgstr "Histórico limpo"
 
 #: src/window.rs:270
 msgid "Undo"
-msgstr ""
+msgstr "Desfazer"
 
 #: src/window.rs:559
 msgid "Failed to get palette color"
-msgstr ""
+msgstr "Falha ao obter a cor da paleta"
 
 #: src/window.rs:590
 msgid "Failed to pick a color"
-msgstr ""
+msgstr "Falha ao escolher uma cor"
